--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 Que tal ver um Teaser, <strong>só clicar no play video.</strong> <br>
                 Vamos trabalhar juntos, segue meu <strong>CV</strong> abaixo 
             </p>
-            <a href="./Portfolio/cv/cv.pdf"target="_blank" rel="noopener noreferrer">DOWNLOAD CV</a>
+            <a href="./Portfolio/cv/cv.pdf"target="_blank" rel="noopener noreferrer" class="cv">DOWNLOAD CV</a>
             <a href="./video.html"target="_blank" rel="noopener noreferrer" class="play">Play video</a>
         </div>
         <div class="images">
@@ -35,6 +35,6 @@
             <img src="./Portfolio/img/naruto.png" class="corpo">
 
         </div>
-    </div>
+    </div> 
 </body>
 </html>
