--- a/video.html
+++ b/video.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="video.css">
 </head>
 <body>
+    <div>
+        <ul>
+            <li><a href="./index.html"><strong>VOLTAR</strong></a></li>
+        </ul>
+    </div>
     <div class="btn">
         <div class="play"></div>
         <p>Play Video</p>
